--- a/Cargo.toml
+++ b/Cargo.toml
@@ -73,13 +73,13 @@ atomic = "0.5.0"
 bytes = "1"
 futures = "0.3.1"
 futures-timer = "3.0.2" # Explicit dependency to be used in `wasm-bindgen` feature
-getrandom = "0.2.3" # Explicit dependency to be used in `wasm-bindgen` feature
-instant = "0.1.11" # Explicit dependency to be used in `wasm-bindgen` feature
+getrandom = "0.2.3"     # Explicit dependency to be used in `wasm-bindgen` feature
+instant = "0.1.11"      # Explicit dependency to be used in `wasm-bindgen` feature
 lazy_static = "1.2"
 
 libp2p-autonat = { version = "0.4.0", path = "protocols/autonat", optional = true }
-libp2p-core = { version = "0.33.0", path = "core",  default-features = false }
-libp2p-dcutr = { version = "0.3.0", path = "protocols/dcutr",  optional = true }
+libp2p-core = { version = "0.33.0", path = "core", default-features = false }
+libp2p-dcutr = { version = "0.3.0", path = "protocols/dcutr", optional = true }
 libp2p-floodsub = { version = "0.36.0", path = "protocols/floodsub", optional = true }
 libp2p-identify = { version = "0.36.0", path = "protocols/identify", optional = true }
 libp2p-kad = { version = "0.37.0", path = "protocols/kad", optional = true }
@@ -97,10 +97,11 @@ libp2p-swarm-derive = { version = "0.27.0", path = "swarm-derive" }
 libp2p-uds = { version = "0.32.0", path = "transports/uds", optional = true }
 libp2p-wasm-ext = { version = "0.33.0", path = "transports/wasm-ext", default-features = false, optional = true }
 libp2p-yamux = { version = "0.37.0", path = "muxers/yamux", optional = true }
+log = "0.4.16"
 multiaddr = { version = "0.14.0" }
 parking_lot = "0.12.0"
 pin-project = "1.0.0"
-rand = "0.7.3" # Explicit dependency to be used in `wasm-bindgen` feature
+rand = "0.7.3"                                                                                                    # Explicit dependency to be used in `wasm-bindgen` feature
 smallvec = "1.6.1"
 
 [target.'cfg(not(any(target_os = "emscripten", target_os = "wasi", target_os = "unknown")))'.dependencies]
@@ -117,7 +118,7 @@ libp2p-gossipsub = { version = "0.38.0", path = "protocols/gossipsub", optional 
 async-std = { version = "1.6.2", features = ["attributes"] }
 async-trait = "0.1"
 env_logger = "0.9.0"
-clap = {version = "3.1.6", features = ["derive"]}
+clap = { version = "3.1.6", features = ["derive"] }
 tokio = { version = "1.15", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread"] }
 
 [workspace]
@@ -149,7 +150,7 @@ members = [
     "transports/tcp",
     "transports/uds",
     "transports/websocket",
-    "transports/wasm-ext"
+    "transports/wasm-ext",
 ]
 
 [[example]]
